Settings: support per-app volume [3/3]
Change-Id: I3e72a4b0fda68a5cd1e9a35fc161a1d7ddae6d7e

Change-Id: Id327b284b2fb8a82a195b515b08894a3ea7dae36
Signed-off-by: AnierinB <anierin@evolution-x.org>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4650,6 +4650,10 @@
                     <action android:name="android.settings.panel.action.VOLUME" />
                     <category android:name="android.intent.category.DEFAULT" />
                 </intent-filter>
+                <intent-filter>
+                    <action android:name="android.settings.panel.action.APP_VOLUME" />
+                    <category android:name="android.intent.category.DEFAULT" />
+                </intent-filter>
         </activity>
 
         <activity android:name=".wifi.addappnetworks.AddAppNetworksActivity"
