Settings: Fix choose pattern size activity theme issues
similar to I7649ecacb5a2dd0cb15ed9b1d05c28b44257bb54

Change-Id: I2bb84ece20f57bbbcb9b1d23ca06e0ccd715f1c2

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2881,8 +2881,7 @@
             android:excludeFromRecents="true" />
 
         <activity android:name=".password.ChooseLockPatternSize"
-            android:exported="false"
-            android:theme="@style/GlifTheme.Light" />
+            android:exported="false" />
 
         <activity android:name=".password.SetupChooseLockPattern"
             android:exported="false"
